<resources>
    <string name="app_name">GUZTIOKEUSKARAPP</string>
    <string name="action_settings">Settings</string>
    <string name="ongietorri">Ongi etorri</string>
    <string name="bienvenido">Bienvenido/a</string>
    <string name="entrar">entrar/sartu</string>
    <string name="title_activity_menu">GUZTIOKEUSKARAPP</string>
    <string name="cuentos">Cuentos/Ipuinak</string>
    <string name="lexiko">Léxico/Lexikoa</string>
    <string name="canciones">Canciones/Abestiak</string>
    <string name="ejercicios">Ejercicios/Jarduerak</string>
    <string name="title_activity_lexiko">Léxico/Lexikoa</string>
    <string name="saludos">Agurrak/Saludos</string>
    <string name="escuela">Eskola/Escuela</string>
    <string name="objetos">Etxeko objektuak-lekuak/Objetos-sitios del hogar</string>
    <string name="adjetivos">Adjektiboak/Adjetivos</string>
    <string name="dias">Asteko egunak/Días de la semana</string>
    <string name="numeros">Zenbakiak/Números</string>
    <string name="familia">Familia/Familia</string>
    <string name="colores">Koloreak/Colores</string>
    <string name="menuprincipal">Menú principal</string>
    <string name="title_activity_cuentos">Cuentos/Ipuinak</string>
    <string name="vercuentos">Ver cuentos</string>
    <string name="contarcuentos">Contar cuentos</string>
    <string name="title_activity_canciones">Canciones/Abestiak</string>
    <string name="pintto">Pintto pintto</string>
    <string name="paris">Paristik natorren</string>
    <string name="xalala">Xalala Riki riki</string>
    <string name="ikusi">Ikusi ikusi han</string>
    <string name="title_activity_ejercicios">Ejercicios/Jarduerak</string>
    <string name="lexikoa">Lexikoa</string>
    <string name="ipuinak">Ipuinak</string>
    <string name="abestiak">Abestiak</string>
    <string name="title_activity_niveles_lexiko">Niveles Léxico</string>
    <string name="primernivel">Primer nivel</string>
    <string name="segundonivel">Segundo nivel</string>
    <string name="tercernivel">Tercer nivel</string>
    <string name="title_activity_niveles_ipuinak">Niveles Cuentos</string>
    <string name="title_activity_niveles_abestiak">Niveles Canciones</string>
    <string name="title_activity_abestiak_primernivel">GUZTIOKEUSKARAPP</string>
    <string name="next">NEXT</string>
    <string name="comprobar">COMPROBAR</string>
    <string name="nivelescanciones">Niveles-canciones</string>
    <string name="nivelescuentos">Niveles-cuentos</string>
    <string name="niveleslexiko">Niveles-léxico</string>
    <string name="title_activity_abestiak_segundonivel">GUZTIOKEUSKARAPP</string>
    <string name="title_activity_eskola">GUZTIOKEUSKARAPP</string>
    <string name="agenda">agenda:agenda</string>
    <string name="boligrafo">bolígrafo:boligrafoa</string>
    <string name="arkatza">lápiz:arkatza</string>
    <string name="liburu">libro:liburu</string>
    <string name="arbela">pizarra:arbela</string>
    <string name="koaderno">cuaderno:koadernoa</string>
    <string name="maisu">profesor:maisu</string>
    <string name="andereño">profesora:andereño</string>
    <string name="errotuladore">rotulador:errotuladore</string>
    <string name="atxingia">goma de borrar:atxingia</string>
    <string name="jantoki">comedor:jantoki</string>
    <string name="eskola">escuela:eskola</string>
    <string name="title_activity_abestiak_tercernivel">Escribe la palabra correcta en minúscula</string>
    <string name="introduce">introduce la palabra</string>
    <string name="title_activity_lexiko_segundonivel">GUZTIOKEUSKARAPP</string>
    <string name="title_activity_etxeko">GUZTIOKEUSKARAPP</string>
    <string name="lanpara">lámpara:lanpara</string>
    <string name="logela">dormitorio:logela</string>
    <string name="komuna">wáter:komuna</string>
    <string name="atea">puerta:atea</string>
    <string name="armairua">armario:armairua</string>
    <string name="egongela">salón:egongela</string>
    <string name="eskailera">escalera:eskailera</string>
    <string name="idazmahaia">escritorio:idazmahaia</string>
    <string name="mahaia">mesa:mahaia</string>
    <string name="ohea">cama:ohea</string>
    <string name="sukaldea">cocina:sukaldea</string>
    <string name="leihoa">ventana:leihoa</string>
    <string name="title_activity_adjektiboak">GUZTIOKEUSKARAPP</string>
    <string name="handia">grande:handia</string>
    <string name="garbia">limpio:garbia</string>
    <string name="zikina">sucio:zikina</string>
    <string name="gaiztoa">malo:gaiztoa</string>
    <string name="txikia">pequeño:txikia</string>
    <string name="luzea">largo:luzea</string>
    <string name="indartsua">fuerte:indartsua</string>
    <string name="zaharra">viejo:zaharra</string>
    <string name="lodia">gordo:lodia</string>
    <string name="motela">lento:motela</string>
    <string name="laburra">corto:laburra</string>
    <string name="polita">bonito:polita</string>
    <string name="title_activity_egunak">GUZTIOKEUSKARAPP</string>
    <string name="astelehena">lunes:astelehena</string>
    <string name="asteartea">martes:asteartea</string>
    <string name="asteazkena">miércoles:asteazkena</string>
    <string name="osteguna">jueves:osteguna</string>
    <string name="ostirala">viernes:ostirala</string>
    <string name="larunbata">sábado:larunbata</string>
    <string name="igandea">domingo:igandea</string>
    <string name="atzo">ayer:atzo</string>
    <string name="etsi">pasado mañana:etsi</string>
    <string name="gaur">hoy:gaur</string>
    <string name="bihar">mañana:bihar</string>
    <string name="herenegun">antes de ayer:herenegun</string>
    <string name="title_activity_zenbakiak">GUZTIOKEUSKARAPP</string>
    <string name="bat">uno:bat</string>
    <string name="bi">dos:bi</string>
    <string name="hiru">tres:hiru</string>
    <string name="lau">cuatro:lau</string>
    <string name="bost">cinco:bost</string>
    <string name="sei">seis:sei</string>
    <string name="zazpi">siete:zazpi</string>
    <string name="zortzi">ocho:zortzi</string>
    <string name="bederatzi">nueve:bederatzi</string>
    <string name="hamar">diez:hamar</string>
    <string name="title_activity_koloreak">GUZTIOKEUSKARAPP</string>
    <string name="larrosa">rosa:larrosa</string>
    <string name="grisa">gris:grisa</string>
    <string name="beltza">negro:beltza</string>
    <string name="urdina">azul:urdina</string>
    <string name="berdea">verde:berdea</string>
    <string name="horia">amarillo:horia</string>
    <string name="gorria">rojo:gorria</string>
    <string name="laranja">naranja:laranja</string>
    <string name="zuria">blanco:zuria</string>
    <string name="morea">morado:morea</string>
    <string name="marroia">marrón:marroia</string>
    <string name="granatea">granate:granatea</string>
    <string name="title_activity_familia">GUZTIOKEUSKARAPP</string>
    <string name="amama">abuela:amama</string>
    <string name="aita">padre:aita</string>
    <string name="ahizpa">hermana de chica:ahizpa</string>
    <string name="arreba">hermana de chico:arreba</string>
    <string name="izeko">tía:izeko</string>
    <string name="aitona">abuelo:aitona</string>
    <string name="alaba">hija:alaba</string>
    <string name="ama">madre:ama</string>
    <string name="semea">hijo:semea</string>
    <string name="osaba">tío:osaba</string>
    <string name="iloba">sobrino/a:iloba</string>
    <string name="lehengusua">primo/prima:lehengusua/lehengusina</string>
    <string name="title_activity_menu_contarcuentos">GUZTIOKEUSKARAPP</string>
    <string name="txanogorritxo">Txangorritxo</string>
    <string name="ahate">Ahate itsusia</string>
    <string name="hirutxerri">Hiru txerikumeak</string>
    <string name="zazpiantxume">Otsoa eta zazpi antxumeak</string>
    <string name="title_activity_contar_txano">ContarTxanoActivity</string>
    <string name="title_activity_contar_ahate">Ahate itsusia</string>
    <string name="title_activity_contar_hiru_txerri">ContarHiruTxerriActivity</string>
    <string name="title_activity_ipuinak_segundonivel">IpuinakSegundonivelActivity</string>
    <string name="escuchar">ESCUCHAR</string>
    <string name="title_activity_ipuinak_niveluno">IpuinakNivelunoActivity</string>
    <string name="title_activity_lexiko_primernivel">LexikoPrimernivelActivity</string>
</resources>